<resources>
    <string name="app_name">USIU Grade Manager</string>
    <string name="splash_intro">Grade Management Mobile Application</string>
    <string name="login_message">Login Page</string>
    <string name="user_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="login_button">Login</string>
    <string name="welcome_lec">Welcome Lecturer</string>
    <string name="welcome_stud">Welcome Student</string>
    <string name="guidance">Please insert the following details: </string>
    <string name="year_hint">Year</string>
    <string name="view_grades">View Grades</string>
    <string name="lec_options">Please select what you would like to do: </string>
    <string name="update_options">Please select the scores you would like to update: </string>
    <string name="see_grade">View Student Grades</string>
    <string name="record_grades">Record Student Grades</string>
    <string name="delete">Delete A Grade Record</string>
    <string name="update">Update A Grade Record</string>
    <string name="new_record">New Record</string>
    <string name="courseid_placeholder">Course ID</string>
    <string name="studid_hint">Student ID</string>
    <string name="limits">Set Limits</string>
    <string name="assignment_limit">Number of Assignments (max:10)</string>
    <string name="labs_limit">Number of Labs (max:10)</string>
    <string name="projects_limit">Number of Projects (max:3)</string>
    <string name="termPaper_limit">Number of Term Papers (max:3)</string>
    <string name="quiz_limit">Number of Quizzes (max:5)</string>
    <string name="exam_limit">Number of Mid Examinations (max:2)</string>
    <string name="endexam_limit">Number of End Examinations (max:2)</string>
    <string name="scores">Scores</string>
    <string name="assignment">Assignment Scores</string>
    <string name="labs">Lab Scores</string>
    <string name="ScoreSet">Please give the details requested below: </string>
    <string name="setScores">Proceed To Set Task Scores</string>
    <string name="setAllScores">Set Scores</string>
    <string name="reminder">*Please note that empty fields will mean that the task was not assigned to the students*</string>
    <string name="headerMessage">Delete Record</string>
</resources>