<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loginMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="200px"
                android:background="#151F55"
                android:paddingTop="50px"
                android:paddingBottom="80px"
                android:text="@string/login_message"
                android:textAlignment="center"
                android:textColor="#FFC107"
                android:textSize="34sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100px"
                android:background="@android:color/darker_gray"
                android:ems="10"
                android:hint="@string/user_placeholder"
                android:inputType="textEmailAddress"
                android:paddingStart="30px"
                android:paddingTop="30px"
                android:paddingBottom="30px"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100px"
                android:layout_marginBottom="180px"
                android:background="@android:color/darker_gray"
                android:ems="10"
                android:hint="@string/password_placeholder"
                android:inputType="textPassword"
                android:paddingStart="30px"
                android:paddingTop="30px"
                android:paddingBottom="30px" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="80px"
                android:backgroundTint="#FFC107"
                android:paddingStart="30px"
                android:paddingLeft="30px"
                android:paddingTop="30px"
                android:paddingEnd="30px"
                android:paddingRight="30px"
                android:paddingBottom="30px"
                android:text="@string/login_button"
                android:textColor="#1A2355"
                android:textSize="16sp"
                app:cornerRadius="30px" />

            <ProgressBar
                android:id="@+id/loadBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="300px"
                android:background="#FFC107"
                android:paddingTop="125px"
                android:paddingBottom="125px" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>