<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".updateHomePage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/updateHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50px"
                android:background="#151F55"
                android:paddingTop="50px"
                android:paddingBottom="80px"
                android:text="Update Page"
                android:textAlignment="center"
                android:textColor="#FFC107"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#151F55"
                android:text="Please add in the following details before progressing:"
                android:textAlignment="center"
                android:textColor="#FFC107"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/studentId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50px"
                android:background="@android:color/darker_gray"
                android:ems="10"
                android:hint="@string/studid_hint"
                android:inputType="number"
                android:paddingStart="30px"
                android:paddingTop="30px"
                android:paddingBottom="30px"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/courseId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100px"
                android:layout_marginBottom="100px"
                android:background="@android:color/darker_gray"
                android:ems="10"
                android:hint="@string/courseid_placeholder"
                android:inputType="textFilter"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                android:paddingStart="30px"
                android:paddingTop="30px"
                android:paddingBottom="30px"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="120px"
                android:background="#151F55"
                android:text="@string/update_options"
                android:textAlignment="center"
                android:textColor="#FFC107"
                android:textSize="20sp" />

            <Button
                android:id="@+id/labUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50px"
                android:backgroundTint="#FFC107"
                android:paddingLeft="100px"
                android:paddingTop="50px"
                android:paddingRight="100px"
                android:paddingBottom="50px"
                android:text="Update Labs"
                android:textColor="#151F55"
                android:textSize="16sp"
                app:cornerRadius="30px" />

            <Button
                android:id="@+id/quizUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50px"
                android:backgroundTint="#151F55"
                android:paddingLeft="100px"
                android:paddingTop="50px"
                android:paddingRight="100px"
                android:paddingBottom="50px"
                android:text="Update Quizzes"
                android:textColor="#FFC107"
                android:textSize="16sp"
                app:cornerRadius="30px" />

            <Button
                android:id="@+id/termPaperUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50px"
                android:backgroundTint="#FFC107"
                android:paddingLeft="100px"
                android:paddingTop="50px"
                android:paddingRight="100px"
                android:paddingBottom="50px"
                android:text="Update Term Papers"
                android:textColor="#151F55"
                android:textSize="16sp"
                app:cornerRadius="30px" />

            <Button
                android:id="@+id/assignmentUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50px"
                android:backgroundTint="#151F55"
                android:paddingLeft="100px"
                android:paddingTop="50px"
                android:paddingRight="100px"
                android:paddingBottom="50px"
                android:text="Update Assignments"
                android:textColor="#FFC107"
                android:textSize="16sp"
                app:cornerRadius="30px"/>

            <Button
                android:id="@+id/examProjectUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="200px"
                android:backgroundTint="#FFC107"
                android:paddingLeft="100px"
                android:paddingTop="50px"
                android:paddingRight="100px"
                android:paddingBottom="50px"
                android:text="Update Exams and Projects"
                android:textColor="#151F55"
                android:textSize="16sp"
                app:cornerRadius="30px"/>

            <TextView
                android:id="@+id/lecFooter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#151F55"
                android:paddingBottom="250px" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>